# smart_dictation

./: .gitignore  README.md  pyproject.toml  setup.cfg
helpers/: sane_input_test.py
smart_dictation/: __main__.py
smart_dictation/sane_output/: __init__.py
src/smart_dictation/: __main__.py  app.py  audio.py  clipboard.py  config.py  hotkeys.py  local_whisper.py  sane_output.py
tests/: test_audio.py
