[project]
name = "smart_dictation"
version = "0.1.0"
description = "Fast dictation app based on OpenAI Whisper with support for LLM transformations"
readme = "README.md"
authors = [
    { name = "Piotr Czapla", email = "piotr.czapla@n-waves.com" },
]
requires-python = ">=3.10,<3.12"

dependencies = [
    "pyaudio>=0.2.13,<1.0.0",
    "pynput>=1.7.6,<2.0.0",
    "pydantic>=2.9.2",
    "typer>=0.12.5",
    "pyperclip>=1.9.0",
    "pydantic-settings>=2.5.2",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "rumps>=0.4.0,<1.0.0",
    "nltk>=3.9.1",
    "pandas>=2.2.2",
    "streamlit>=1.39.0",
    "tqdm>=4.66.5",
    "pyautogui>=0.9.54",
]

[project.scripts]
whisper = "smart_dictation:main"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
includes = []
